# POMP

./: .env.example  .gitignore  .markdownlint.json  CONTRIBUTING.md  README.md
backend/core/: Cargo.toml
backend/core/migrations/: 035_add_department_id_to_users.down.sql  035_add_department_id_to_users.up.sql
backend/core/scripts/: create_admin.rs
backend/core/sqlx/migrations/: 00000000000000_create_users_table.up.sql  013_create_field_records_tables.up.sql  014_create_dict_tables.down.sql  014_create_dict_tables.up.sql  015_create_help_tables.up.sql  016_create_contract_tables.down.sql  016_create_contract_tables.up.sql  017_create_workflow_tables.down.sql  017_create_workflow_tables.up.sql  018_create_schedule_tables.down.sql  018_create_schedule_tables.up.sql  019_create_gis_tables.up.sql  020_create_cms_tables.up.sql  021_create_roles_and_permissions_tables.down.sql  021_create_roles_and_permissions_tables.up.sql  022_create_workflow_tables.down.sql  022_create_workflow_tables.up.sql  024_add_approval_rule_id_to_workflow_steps.up.sql  025_create_approval_rules_table.up.sql  026_create_organization_tables.up.sql  027_init_dict_data.up.sql  028_create_hr_tables.down.sql  028_create_hr_tables.up.sql  029_add_password_security_fields.up.sql  032_create_website_tables.down.sql  032_create_website_tables.up.sql  033_create_media_tables.up.sql  034_create_production_docs_tables.down.sql  034_create_production_docs_tables.up.sql  035_add_department_id_to_users.up.sql  036_create_erp_tables.down.sql  036_create_erp_tables.up.sql  037_create_materials_table.up.sql  037_create_templates_table.down.sql  (+11 more)
backend/core/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
backend/core/src/db/: cms.rs  (+27 more)
(+226 files in other folders)
