[package]
name = "sksfems_backend"
version = "0.1.0"
edition = "2021"
description = "企业管理系统后端服务"

[lib]
name = "sksfems_backend"
path = "src/lib.rs"

[[bin]]
name = "sksfems_backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal", "macros", "migrate"], default-features = false }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.125"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
bcrypt = "0.16.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
thiserror = "2.0.18"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "multipart", "stream"] }
dotenv = "0.15.0"
envy = "0.4"
validator = { version = "0.20", features = ["derive"] }
axum-extra = "0.9"
multer = "3.0"
bigdecimal = { version = "0.4", features = ["serde"] }
scraper = "0.18"
url = "2.5"
base64 = "0.22"
urlencoding = "2.1"
lazy_static = "1.4"
tempfile = "3.10"
walkdir = "2.5"
zip = { version = "0.6", features = ["time"] }

[dev-dependencies]
tokio-test = "0.4"
